hphp/test/zend/good/ext/openssl/tests/openssl_decrypt_error.php.skipif
<?php if (!extension_loaded("openssl")) print "skip"; ?>