hphp/test/zend/bad/ext/pcntl/tests/pcntl_get_last_error.php.skipif
<?php
	if (!extension_loaded("pcntl")) print "skip"; 
?>